--- a/www/templates/items.html
+++ b/www/templates/items.html
@@ -26,7 +26,7 @@
         
   <a class="back-{{item.background}} itemBox"ng-repeat="item in Items" href="#/app/item/{{item.id}}">
       <div class="price">
-      <i ng-show="item.featured || item.staffPicked" class="icon ion-heart labelFeatured"></i> $ {{item.price}}    
+      <i ng-show="item.featured || item.staffPicked" class="icon ion-heart labelFeatured"></i>    
     </div>
     <div class="image">
       <img src="{{item.picture}}" width="150" />
