--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -41,6 +41,12 @@
                 <i class="icon ion-ios-chatboxes-outline"></i>
               <p class="smallText">messages</p>
             </a>
+
+          <a ng-show="currentUser" href="#/app/leaderboard" class="button button-clear logo" nav-clear menu-close>
+              <i class="icon ion-podium"></i>
+            <p class="smallText">leader</p>
+          </a>
+
           <a ng-show="currentUser" href="#/app/settings" class="button button-clear logo" nav-clear menu-close>
                 <i class="icon ion-ios-settings"></i>
               <p class="smallText">settings</p>
