auto message attending

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,6 +1,6 @@
 <ion-view view-title="" hide-nav-bar="true">
     
-    <ion-header-bar align-title="center" class="bar-light bar-transparent">
+    <ion-header-bar align-title="center" class="bar bar-header bar-dark">
         <div class="buttons">
             <button class="button button-clear" menu-toggle="left"><i class="icon ion-navicon"></i></button>
             <a class="button button-clear" ng-click="search()"><i class="icon ion-search"></i></a>
