--- a/www/templates/item.html
+++ b/www/templates/item.html
@@ -32,7 +32,7 @@
         </div>
         
         <span class=" button-bar">
-            <a ng-click="addToFavourites()" ng-show="currentUser.email" class="button  back-4">
+            <a ng-click="addToFavourites(item)" ng-show="currentUser.email" class="button  back-4">
                 <i class="icon ion-ios-heart-outline"></i>
             </a>
             <a ng-click="onShare()" class="button back-5 ">
