refactor database, handle give points validate

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -23,10 +23,10 @@
                 <img src="{{item.picture}}" width="150" />
             </div>
             <div class="location">
-                {{item.location | limitTo:27}}
+                {{item.location}}
             </div>
             <div class="title">
-                {{item.name | limitTo:12}}
+                {{item.name}}
             </div>
         </a>
     </div>
@@ -41,10 +41,10 @@
                 <img src="{{item.picture}}" width="150" />
             </div>
             <div class="location">
-                {{item.location | limitTo:27}}
+                {{item.location}}
             </div>
             <div class="title">
-                {{item.name | limitTo:12}}
+                {{item.name}}
             </div>
         </a>
         
