--- a/www/templates/item.html
+++ b/www/templates/item.html
@@ -53,13 +53,13 @@
             
         </span>
 
-        <div class="list" ng-init="getUsers()">
-            <div class="item item-thumbnail-left item-button-right" ng-repeat="user in Users">
-                <img id="myAvatar" src="{{user.avatar}}">
-                <h2><i class="icon ion-ios-email-outline"></i>   {{user.email}}</h2>
-                <p><i class="icon ion-ios-navigate-outline"></i>   {{user.location}}</p>
-                <p><i class="icon ion-ios-telephone-outline"></i>   {{user.phone}}</p>
-                <button class="button button-transparent" ng-click="savePoint(user)">
+        <div class="list" ng-show="isCreator()" ng-init="getUsers()">
+            <div class="item item-thumbnail-left item-button-right" ng-repeat="user1 in Users">
+                <img id="myAvatar" src="{{user1.avatar}}">
+                <h2><i class="icon ion-ios-email-outline"></i>   {{user1.email}}</h2>
+                <p><i class="icon ion-ios-navigate-outline"></i>   {{user1.location}}</p>
+                <p><i class="icon ion-ios-telephone-outline"></i>   {{user1.phone}}</p>
+                <button class="button button-transparent" ng-show="canGivePoint(user1)" ng-click="savePoint(user1)">
                   <i class="icon ion-android-done"></i>
                 </button>
             </div>
