reschema user fields in items

--- a/www/templates/add.html
+++ b/www/templates/add.html
@@ -87,7 +87,7 @@
             </div>
         
             
-            <div class="row" ng-show="!currentUser.email">
+            <div class="row">
                 <div class="col">
                     
                     <label class="item item-input item-floating-label">
