--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -13,12 +13,11 @@
     </ion-header-bar>
 
     <ion-content class="padding">
-
-    <div ng-show="featuredItems.length">
+    <div>
         
-        <h4 class="center">Featured</h4>
+        <h4 class="center">Available Campaigns</h4>
         
-        <a class="back-{{item.background}} itemBox"ng-repeat="item in featuredItems" href="#/app/item/{{item.id}}">
+        <a class="back-{{item.background}} itemBox"ng-repeat="item in items" href="#/app/item/{{item.id}}">
             <div class="image">
                 <img src="{{item.picture}}" width="150" />
             </div>
@@ -27,43 +26,6 @@
             </div>
             <div class="title">
                 {{item.name}}
-            </div>
-        </a>
-    </div>
-        
-    
-    <div ng-show="staffItems.length">
-        
-        <h4 class="center">Staff Picks</h4>
-        
-        <a class="back-{{item.background}} itemBox"ng-repeat="item in staffItems" href="#/app/item/{{item.id}}">
-            <div class="image">
-                <img src="{{item.picture}}" width="150" />
-            </div>
-            <div class="location">
-                {{item.location}}
-            </div>
-            <div class="title">
-                {{item.name}}
-            </div>
-        </a>
-        
-    </div>
-        
-    
-    <div ng-show="newestItems.length">    
-        
-        <h4 class="center">Newest</h4>
-        
-        <a class="back-{{item.background}} itemBox"ng-repeat="item in newestItems" href="#/app/item/{{item.id}}">
-            <div class="image">
-                <img src="{{item.picture}}" width="150" />
-            </div>
-            <div class="location">
-                {{item.location | limitTo:27}}
-            </div>
-            <div class="title">
-                {{item.name | limitTo:12}}
             </div>
         </a>
         
